// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TextField Default 1`] = `
<div
  className="sc-TOsTZ hSETfp"
  onBlurCapture={[Function]}
  onClick={[Function]}
  onFocusCapture={[Function]}
>
  <div
    className="sc-kjoXOD bjvyLn"
  >
    Huisnummer
  </div>
  <input
    className="sc-gisBJw gsqkpa"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
  <div
    className="sc-cHGsZl hVcyhF"
  >
    $
  </div>
</div>
`;

exports[`Storyshots TextField With Currency formatting 1`] = `
Array [
  <div
    className="sc-TOsTZ hSETfp"
    onBlurCapture={[Function]}
    onClick={[Function]}
    onFocusCapture={[Function]}
  >
    <div
      className="sc-kjoXOD bjvyLn"
    >
      $
    </div>
    <input
      className="sc-gisBJw gsqkpa"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value="10.00"
    />
  </div>,
  <div
    className="sc-bwzfXH eSFIdE"
  >
    <p
      className="sc-bxivhb WWdpn"
    >
      <span
        className="sc-htpNat eGtcyu"
      >
        <span
          className="sc-htpNat bCblnl"
        >
          <span
            aria-hidden={true}
            className="sc-iwsKbI jSMqMr"
            dangerouslySetInnerHTML={
              Object {
                "__html": "test-file-stub",
              }
            }
            role="img"
          />
        </span>
        <span
          className="sc-htpNat eGtcyu"
        >
          The reported value of this field is: 10
        </span>
      </span>
    </p>
  </div>,
]
`;

exports[`Storyshots TextField With Feedback 1`] = `
Array [
  <div
    className="sc-TOsTZ jTGDTf"
    onBlurCapture={[Function]}
    onClick={[Function]}
    onFocusCapture={[Function]}
  >
    <div
      className="sc-kjoXOD bjvyLn"
    >
      Huisnummer
    </div>
    <input
      className="sc-gisBJw gsqkpa"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
    <div
      className="sc-cHGsZl hVcyhF"
    >
      $
    </div>
  </div>,
  <div
    className="sc-bwzfXH eSFIdE"
  >
    <p
      className="sc-bxivhb kRfUJT"
    >
      <span
        className="sc-htpNat eGtcyu"
      >
        <span
          className="sc-htpNat bCblnl"
        >
          <span
            aria-hidden={true}
            className="sc-iwsKbI jSMqMr"
            dangerouslySetInnerHTML={
              Object {
                "__html": "test-file-stub",
              }
            }
            role="img"
          />
        </span>
        <span
          className="sc-htpNat eGtcyu"
        >
          This is a feedback message
        </span>
      </span>
    </p>
  </div>,
]
`;
